--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,11 +25,11 @@
                     <li class="nav-item">
                         <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-area="" asp-controller="Clients" asp-action="Index">Clientes</a>
+                    </li>
                     @* <li class="nav-item"> *@
-                    @*     <a class="nav-link text-dark" asp-area="" href="#">Clientes</a> *@
-                    @* </li> *@
-                    @* <li class="nav-item"> *@
-                    @*     <a class="nav-link text-dark" asp-area="" href="#">Produtos</a> *@
+                    @*     <a class="nav-link text-light" asp-area="" asp-controller="Products" asp-action="Index">Products</a> *@
                     @* </li> *@
                 </ul>
             </div>
