Corrigindo a conexão com o Oracle, adicionando pacote NuGet "Oracle.ManagedDataAccess.Core" no lugar do "Microsoft.Data.SqlClient" e melhorando a aparência da view Index de Clientes

--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -19,7 +19,10 @@
             @Html.DisplayNameFor(model => model.Email)
         </td>
         <td>
-            @Html.DisplayNameFor(model => model.Active)
+            @Html.DisplayName("Ativo?")
+        </td>
+        <td>
+            @Html.DisplayName("Opções")
         </td>
         </thead>
         <tbody>
