--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle border-1 border-primary rounded-1" style="color: white;" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Clientes</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item text-black" asp-controller="Clients" asp-action="Index">Listar Clientes</a>
+                            <a id="ListarClientesBotao" class="dropdown-item text-black" asp-controller="Clients" asp-action="Index">Listar Clientes</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item text-black" @* a:hov asp-controller="Clients" asp-action="Create"*@>Adicionar Clientes</a>
                         </div>
@@ -39,6 +39,13 @@
     <main role="main" class="pb-3">
         @RenderBody()
     </main>
+</div>
+
+@* Loading Spinner *@
+<div class="d-flex justify-content-center h-100">
+    <button id="LoadingSpinner" class="btn btn-lg btn-light disabled" style="display: none">
+        <span class="spinner-border spinner-border-lg"></span>
+    </button>
 </div>
 
 <footer class="border-top footer text-muted">
