--- a/Views/Clients/Details.cshtml
+++ b/Views/Clients/Details.cshtml
@@ -19,7 +19,11 @@
                 <input class="form-control" type="text" placeholder="@Html.DisplayFor(model => model.LastName)" readonly>
             </div>
             <div class="form-group">
-                <label asp-for="Active">Ativo?</label>
+                <label asp-for="Email" class="text-black fs-4">Email</label>
+                <input class="form-control" type="text" placeholder="@Html.DisplayFor(model => model.Email)" readonly>
+            </div>
+            <div class="form-group">
+                <label class="text-black fs-4" asp-for="Active">Ativo?</label>
                 @Html.DisplayFor(model => model.Active)
             </div>
         </form>
@@ -28,6 +32,6 @@
 <h4></h4>
 <div></div>
 <div>
-    <a class="btn btn-primary rounded-1 mb-1" asp-action="Index">Retornar a Lista</a>
+    <a class="btn btn-secondary rounded-1 mb-1" asp-action="Index">Retornar a Lista</a>
     @* <a class="btn btn-warning rounded-1 mb-1" asp-action="Edit" asp-route-id="@Model.Id">Editar</a> *@
 </div>
