--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -47,7 +47,7 @@
                 <td>
                     <a class="btn btn-info border-1 m-1" asp-action="Details" asp-route-id="@client.Id">Detalhes</a>
                     <a class="btn btn-warning border-1 m-1" @* asp-action="Edit" asp-route-id="@client.Id"*@>Editar</a>
-                    <a class="btn btn-danger border-1 m-1" @* asp-action="Delete" asp-route-id="@client.Id"*@>Remover</a>
+                    <a class="btn btn-danger border-1 m-1" asp-action="Delete" asp-route-id="@client.Id">Remover</a>
                 </td>
             </tr>
         }
