--- a/Views/Clients/Details.cshtml
+++ b/Views/Clients/Details.cshtml
@@ -8,19 +8,19 @@
         <form asp-action="Details">
             <div class="form-group">
                 <label asp-for="Id" class="text-black fs-4">Id</label>
-                <input class="form-control" type="text" placeholder="@Html.DisplayFor(model => model.Id)" readonly>
+                <input class="form-control w-50" type="text" placeholder="@Html.DisplayFor(model => model.Id)" readonly>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="text-black fs-4">Nome</label>
-                <input class="form-control" type="text" placeholder="@Html.DisplayFor(model => model.Name)" readonly>
+                <input class="form-control w-75" type="text" placeholder="@Html.DisplayFor(model => model.Name)" readonly>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="text-black fs-4">Sobrenome</label>
-                <input class="form-control" type="text" placeholder="@Html.DisplayFor(model => model.LastName)" readonly>
+                <input class="form-control w-75" type="text" placeholder="@Html.DisplayFor(model => model.LastName)" readonly>
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="text-black fs-4">Email</label>
-                <input class="form-control" type="text" placeholder="@Html.DisplayFor(model => model.Email)" readonly>
+                <input class="form-control w-75" type="text" placeholder="@Html.DisplayFor(model => model.Email)" readonly>
             </div>
             <div class="form-group">
                 <label class="text-black fs-4" asp-for="Active">Ativo?</label>
