Desenvolvendo a View Index de Produtos

--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -1,6 +1,6 @@
 @model IEnumerable<GetClientViewModel>
 
-<div class="text-primary">Clients List</div>
+<div class="text-primary">Lista de Clientes</div>
 <br/>
 
 <form asp-action="Index" method="get">
