Desenvolvendo as View Details, View Delete para Products e corrigindo o método de delete product em seu repositório

--- a/Views/Home/Quirks.cshtml
+++ b/Views/Home/Quirks.cshtml
@@ -42,5 +42,5 @@
 </div>
 <h4></h4>
 <div>
-    <a class="btn btn-primary rounded-1 mb-1" asp-action="Index">Retornar a Lista</a>
+    <a class="btn btn-secondary rounded-1 mb-1" asp-action="Index">Retornar a Lista</a>
 </div>
