Melhorando a estética do Alert na View de Delete para Produtos e Clientes

--- a/Views/Clients/Delete.cshtml
+++ b/Views/Clients/Delete.cshtml
@@ -1,8 +1,8 @@
 @model GetClientViewModel
 
-<div class="alert alert-danger">
-    <strong>Cuidado!</strong>
-    <p class="text-white">Você realmente deseja deletar este cliente?</p>
+<div class="alert alert-danger w-50">
+    <strong class="fs-4">Cuidado!</strong>
+    <p class="text-white fs-6">Você realmente deseja deletar este cliente?</p>
 </div>
 <br/>
 <div class="col-md-4">
