--- a/Views/Products/Delete.cshtml
+++ b/Views/Products/Delete.cshtml
@@ -1,23 +1,23 @@
 @model GetProductViewModel
 
-<div class="alert alert-danger">
-    <strong>Cuidado!</strong>
-    <p class="text-white">Você realmente deseja deletar este produto?</p>
+<div class="alert alert-danger w-50">
+    <strong class="fs-4">Cuidado!</strong>
+    <p class="text-white fs-6">Você realmente deseja deletar este produto?</p>
 </div>
 <br/>
 <div class="col-md-4">
     <form asp-action="Details">
         <div class="form-group">
             <label asp-for="Id" class="text-black fs-4">Id</label>
-            <input class="form-control w-auto" type="text" placeholder="@Html.DisplayFor(model => model.Id)" readonly/>
+            <input class="form-control w-50" type="text" placeholder="@Html.DisplayFor(model => model.Id)" readonly/>
         </div>
         <div class="form-group">
             <label asp-for="Name" class="text-black fs-4">Nome</label>
-            <input class="form-control w-auto" type="text" placeholder="@Html.DisplayFor(model => model.Name)" readonly/>
+            <input class="form-control w-75" type="text" placeholder="@Html.DisplayFor(model => model.Name)" readonly/>
         </div>
         <div class="form-group">
             <label asp-for="Value" class="text-black fs-4">Preço</label>
-            <input class="form-control w-auto" type="text" placeholder="@($"{Model.Value:c}")" readonly/>
+            <input class="form-control w-75" type="text" placeholder="@($"{Model.Value:c}")" readonly/>
         </div>
         <div class="form-group">
             <label asp-for="Active" class="text-black fs-4">Ativo?</label>
