--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <div class="dropdown-menu">
                             <a id="ListarProdutosBotao" class="dropdown-item text-black" asp-controller="Products" asp-action="Index">Listar Produtos</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item text-black" @* a:hov asp-controller="Clients" asp-action="Create"*@>Adicionar Produtos</a>
+                            <a class="dropdown-item text-black" a:hov asp-controller="Products" asp-action="Create">Adicionar Produtos</a>
                         </div>
                     </li>
                     <li class="nav-item">
