Corringindo a regra RuleFor da validação de Email do cliente para atualizar e criar e criando a View para adicionar novo cliente

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         <div class="dropdown-menu">
                             <a id="ListarClientesBotao" class="dropdown-item text-black" asp-controller="Clients" asp-action="Index">Listar Clientes</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item text-black" @* a:hov asp-controller="Clients" asp-action="Create"*@>Adicionar Clientes</a>
+                            <a class="dropdown-item text-black" a:hov asp-controller="Clients" asp-action="Create">Adicionar Clientes</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
