--- a/Views/Clients/Edit.cshtml
+++ b/Views/Clients/Edit.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <label asp-for="Active">Ativo?</label>
-            @Html.CheckBoxFor(model => model.Active)
+            <input class="form-check-input" asp-for="Active"/>
         </div>
         <h4></h4>
         <div class="form-group">
