--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Active" class="control-label">Ativo?</label>
-                @Html.CheckBoxFor(model => model.Active)
+                <input class="form-check-input" asp-for="Active"/>
             </div>
             <div class="form-group">
                 <h4>
