Refatorando o nome das propriedades e colunas do banco para facilitar o mapeamento

--- a/Views/Clients/Edit.cshtml
+++ b/Views/Clients/Edit.cshtml
@@ -6,9 +6,9 @@
     <form asp-action="Edit">
         <input asp-for="Id" hidden/>
         <div class="form-group">
-            <label asp-for="Name">Nome</label>
-            <input asp-for="Name" type="text" class="form-control w-75"/>
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <label asp-for="ClientName">Nome</label>
+            <input asp-for="ClientName" type="text" class="form-control w-75"/>
+            <span asp-validation-for="ClientName" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="LastName">Sobrenome</label>
