--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -33,7 +33,7 @@
                     @Html.DisplayFor(modelItem => client.Id)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => client.Name)
+                    @Html.DisplayFor(modelItem => client.ClientName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => client.LastName)
