--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -6,9 +6,9 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" type="text" class="form-control w-75 p-1"/>
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="ProductName" class="control-label"></label>
+                <input asp-for="ProductName" type="text" class="form-control w-75 p-1"/>
+                <span asp-validation-for="ProductName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Value" class="control-label"></label>
