--- a/Views/Products/Delete.cshtml
+++ b/Views/Products/Delete.cshtml
@@ -12,8 +12,8 @@
             <input class="form-control w-50" type="text" placeholder="@Html.DisplayFor(model => model.Id)" readonly/>
         </div>
         <div class="form-group">
-            <label asp-for="Name" class="text-black fs-4">Nome</label>
-            <input class="form-control w-75" type="text" placeholder="@Html.DisplayFor(model => model.Name)" readonly/>
+            <label asp-for="ProductName" class="text-black fs-4">Nome</label>
+            <input class="form-control w-75" type="text" placeholder="@Html.DisplayFor(model => model.ProductName)" readonly/>
         </div>
         <div class="form-group">
             <label asp-for="Value" class="text-black fs-4">Preço</label>
