--- a/Views/Products/Edit.cshtml
+++ b/Views/Products/Edit.cshtml
@@ -6,9 +6,9 @@
     <form asp-action="Edit">
         <input type="hidden" asp-for="Id"/>
         <div class="form-group">
-            <label asp-for="Name">Nome</label>
-            <input asp-for="Name" class="form-control w-75"/>
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <label asp-for="ProductName">Nome</label>
+            <input asp-for="ProductName" class="form-control w-75"/>
+            <span asp-validation-for="ProductName" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label asp-for="Value">Preço</label>
