--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -30,7 +30,7 @@
                     @Html.DisplayFor(modelItem => product.Id)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => product.Name)
+                    @Html.DisplayFor(modelItem => product.ProductName)
                 </td>
                 <td>
                     @($"{product.Value:c}")
