--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item" href="#">Produtos ligados a Cliente</a>
+                                <a class="dropdown-item" href="#">Produtos ligados a Clientes</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
