--- a/Views/Clients/Create.cshtml
+++ b/Views/Clients/Create.cshtml
@@ -6,9 +6,9 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div class="form-group">
-                <label asp-for="Name" class="control-label">Nome</label>
-                <input asp-for="Name" type="text" class="form-control w-75 p-1"/>
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="ClientName" class="control-label">Nome</label>
+                <input asp-for="ClientName" type="text" class="form-control w-75 p-1"/>
+                <span asp-validation-for="ClientName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label">Sobrenome</label>
