--- a/Views/Clients/Delete.cshtml
+++ b/Views/Clients/Delete.cshtml
@@ -12,8 +12,8 @@
             <input class="form-control w-50" type="text" placeholder="@Html.DisplayFor(model => model.Id)" readonly/>
         </div>
         <div class="form-group">
-            <label asp-for="Name" class="text-black fs-4">Nome</label>
-            <input class="form-control w-75" type="text" placeholder="@Html.DisplayFor(model => model.Name)" readonly/>
+            <label asp-for="ClientName" class="text-black fs-4">Nome</label>
+            <input class="form-control w-75" type="text" placeholder="@Html.DisplayFor(model => model.ClientName)" readonly/>
         </div>
         <div class="form-group">
             <label asp-for="Email" class="text-black fs-4">Email</label>
