--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                         </button>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item" href="#">Produtos ligados a Clientes</a>
+                                <a class="dropdown-item text-primary" asp-area="" asp-controller="ClientsProducts" asp-action="Index">Produtos ligados a Clientes</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
