Modificando a View Index de "ProductClient" para receber uma ViewBag de "NameSortParam" e modificando sua controller para incluir esse filtro

--- a/Views/ClientsProducts/Index.cshtml
+++ b/Views/ClientsProducts/Index.cshtml
@@ -7,7 +7,7 @@
     <table class="table table-bordered table-hover">
         <thead>
         <td>
-            @Html.DisplayName("Nome do Cliente")
+            <a class="text-black" asp-action="Index" asp-route-sortOrder="@ViewBag.NameSortParam">Nome do Cliente</a>
         </td>
         <td>
             @Html.DisplayNameFor(model => model.Email)
